# drt-sdk-rs

./: .gitignore  Cargo.toml  README.md  benchmarks.sh  build-wasm.sh  clean-wasm.sh  coverage.sh  denali-fmt.sh  meta-run-all.sh  publish.sh  remove-outputs.sh  rename-denali.sh  run-scenarios-go.sh  rustfmt.toml  sizes.sh  tool-update.sh  vm-test-build-copy.sh  wabt-contracts.sh  zip-example-wasm.sh
contracts/benchmarks/send-tx-repeat/: Cargo.toml
contracts/benchmarks/str-repeat/: Cargo.toml  sc-config.toml
contracts/core/price-aggregator/: Cargo.toml  README.md  sc-config.toml
contracts/core/wrewa-swap/: .gitignore  Cargo.toml  README.md  sc-config.toml
contracts/examples/adder/: Cargo.toml  drtsc-template.toml  sc-config.toml
contracts/examples/check-pause/: Cargo.toml
contracts/examples/crowdfunding-dcdt/: Cargo.toml
contracts/examples/crowdfunding-dct/: .gitignore  Cargo.toml  sc-config.toml
contracts/examples/crypto-bubbles/: Cargo.toml
contracts/examples/dcdt-transfer-with-fee/: Cargo.toml
contracts/examples/dct-transfer-with-fee/: .gitignore  Cargo.toml  README.md
contracts/examples/digital-cash/: Cargo.toml  README.md  sc-config.toml
contracts/examples/factorial/: Cargo.toml
contracts/examples/fractional-nfts/: Cargo.toml  readme.md
contracts/examples/lottery-dct/: Cargo.toml  documentation.md
contracts/examples/multisig/: Cargo.toml  README.md  sc-config.toml  wrewa_proxy.rs
contracts/examples/nft-minter/: Cargo.toml  readme.md
contracts/modules/: Cargo.toml  README.md
contracts/modules/src/: claim_developer_rewards.rs  dcdt.rs  dct.rs  default_issue_callbacks.rs  dns.rs  dns_proxy.rs  features.rs  lib.rs  ongoing_operation.rs  only_admin.rs  pause.rs  staking.rs  subscription.rs  transfer_role_proxy.rs  users.rs
data/codec/: Cargo.toml  README.md
data/codec-derive/: Cargo.toml  README.md
data/codec-derive/src/: lib.rs  nested_de_derive.rs  nested_en_derive.rs  top_de_derive.rs  top_en_derive.rs  util.rs
data/codec/src/: codec_convert.rs  codec_err.rs  codec_err_handler.rs  default_traits.rs  lib.rs  num_conv.rs  test_util.rs  transmute.rs  try_static_cast.rs
data/codec/tests/: derive_empty_struct_test.rs  derive_enum_or_default_test.rs  derive_enum_test.rs  derive_enum_tricky_defaults_fieldless_test.rs  derive_enum_tricky_defaults_test.rs  derive_hygiene.rs  derive_struct_or_default_generic_test.rs  derive_struct_or_default_test.rs  derive_struct_test.rs  derive_struct_with_generic_test.rs  derive_tuple_struct_test.rs  explicit_impl_enum.rs  explicit_impl_struct.rs  explicit_impl_struct_opt_field.rs  explicit_impl_wrapped_array.rs
framework/base/: Cargo.toml  README.md
framework/base/src/: abi.rs  api.rs  contract_base.rs  derive_imports.rs  err_msg.rs  external_view_contract.rs  formatter.rs  imports.rs  io.rs  lib.rs  log_util.rs  macros.rs  non_zero_util.rs  storage.rs  tuple_util.rs  types.rs
framework/base/tests/: formatter_test.rs
framework/derive/: Cargo.toml  README.md
framework/derive/src/: contract_impl.rs  lib.rs  macro_contract.rs  macro_module.rs  macro_proxy.rs  managed_vec_item_derive.rs  type_abi_derive.rs
framework/meta/: Cargo.toml  README.md
framework/meta-lib/: Cargo.toml  README.md
framework/meta-lib/src/: abi_json.rs  cargo_toml_contents.rs  cli.rs  code_report_json.rs  contract.rs  dct_attr_file_json.rs  drtsc_file_json.rs  ei.rs  ei_check_json.rs  lib.rs  print_util.rs  report_info_json.rs  tools.rs  version.rs  version_history.rs
framework/meta-lib/tests/: ei_test.rs  multi_contract_test.rs
framework/meta/src/: cli.rs  cmd.rs  folder_structure.rs  lib.rs  main.rs
framework/meta/tests/: stg_process_code_test.rs  template_test.rs
framework/scenario/: Cargo.toml  README.md
framework/scenario/src/: api.rs  bech32.rs  debug_executor.rs  display_util.rs  facade.rs  imports.rs  lib.rs  managed_test_util.rs  scenario.rs  scenario_macros.rs  vm_go_tool.rs  whitebox_legacy.rs
framework/scenario/tests/: address_eq_test.rs  big_float_test.rs  big_int_test.rs  big_uint_test.rs  contract_call_test.rs  contract_without_macros.rs  dcdt_token_payment_test.rs  dct_token_payment_test.rs  derive_managed_vec_item_biguint_test.rs  derive_managed_vec_item_dcdt_token_payment_test.rs  derive_managed_vec_item_dct_token_payment_test.rs  derive_managed_vec_item_simple_enum.rs  derive_managed_vec_item_struct_1_test.rs  derive_managed_vec_item_struct_2_test.rs  derive_managed_vec_item_struct_3.rs  hex_call_data_arg_load.rs  managed_buffer_read_to_end_test.rs  managed_codec_test.rs  managed_decimal_test.rs  managed_option_test.rs  managed_ref_test.rs  managed_type_debug_test.rs  managed_vec_test.rs  multi_value_encoded_test.rs  path_test.rs  scenarios_io_test.rs  scenarios_self_test.rs  single_tx_api_test.rs  static_buffer_ref_test.rs  test_hash_bi_di_mapper.rs  test_hash_map_mapper.rs  test_hash_map_storage_mapper.rs  test_hash_set_mapper.rs  test_hash_unordered_set_mapper.rs  test_linked_list_mapper.rs  test_print_api.rs  test_queue_mapper.rs  test_vec_mapper.rs  token_identifier_test.rs
framework/snippets/: Cargo.toml  README.md
framework/snippets/src/: account_tool.rs  imports.rs  interactor.rs  interactor_dns.rs  interactor_scenario.rs  interactor_sender.rs  interactor_tx.rs  lib.rs  multi.rs  network_response.rs  test_wallets.rs
framework/snippets/tests/: test_tx_deployed_address.rs  test_tx_issued_token_identifier.rs  test_tx_multi_contract_sc_result.rs  test_tx_multiple_sc_results.rs  test_tx_sc_result.rs
framework/wasm-adapter/: Cargo.toml  README.md
framework/wasm-adapter/src/: error_hook.rs  lib.rs  panic.rs  wasm_alloc.rs  wasm_macros.rs
sdk/scenario-format/: Cargo.toml  README.md
sdk/scenario-format/src/: interpret_trait.rs  lib.rs  reconstruct_trait.rs
tools/plotter/: .gitignore  Cargo.toml  README.md  build-wasm.sh  start-server.bat  start-server.sh
vm/: Cargo.toml  README.md
vm/src/: crypto_functions.rs  display_util.rs  lib.rs  mem_conv.rs  tx_execution.rs  tx_mock.rs  types.rs  vm_err_msg.rs  vm_hooks.rs  with_shared.rs  world_mock.rs
vm/tests/: test_crypto.rs
(+2642 files in other folders)
