[package]
name = "drt-chain-vm"
version = "0.0.3"
edition = "2021"

authors = ["xfactor-toml <xfactor.toml@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/DharitriOne/drt-sdk-rs"
homepage = "https://dharitri.com/"
documentation = "https://docs.dharitri.com/"
description = "Dharitri VM implementation and tooling"
keywords = ["dharitri", "blockchain", "vm", "tools"]
categories = ["cryptography::cryptocurrencies", "development-tools::debugging"]

[features]
# not supported when compiling to wasm
wasm-incopatible = ["rand", "rand_seeder", "ed25519-dalek"]

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
hex = "0.4"
sha2 = "0.10.6"
sha3 = "0.10.6"
itertools = "0.13.0"
hex-literal = "=0.4.1"
bitflags = "=2.6.0"
colored = "2.1.0"
rand = { version= "0.8.5", optional = true }
rand_seeder = { version= "0.2.2", optional = true }
ed25519-dalek = { version = "1.0.1" , optional = true }

[dependencies.drt-chain-vm-executor]
version = "0.0.2"
