[package]
name = "drt-sc-codec"
version = "0.20.1"
edition = "2021"

authors = ["xfactor-toml <xfactor.toml@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/DharitriOne/drt-sdk-rs"
homepage = "https://dharitri.com/"
documentation = "https://docs.dharitri.com/"
description = "Lightweight binary serializer/deserializer, written especially for Dharitri smart contracts"
keywords = ["dharitri", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies", "development-tools"]

[features]
derive = ["drt-sc-codec-derive"]

[dependencies.drt-sc-codec-derive]
path = "../codec-derive"
version = "=0.20.1"
optional = true

[dependencies]
arrayvec = { version = "=0.7.4", default-features = false }
num-bigint = { version = "0.4", optional = true } # can only be used in std contexts
unwrap-infallible = "0.1.5"

[dev-dependencies.drt-sc-codec-derive]
path = "../codec-derive"
version = "=0.20.1"
