[package]
name = "drt-sc-meta-lib"
version = "0.0.2"
edition = "2021"

authors = ["xfactor-toml <xfactor.toml@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/DharitriOne/drt-sdk-rs"
homepage = "https://dharitri.com/"
documentation = "https://docs.dharitri.com/"
description = "Dharitri smart contract meta-programming tools and build system"
keywords = ["dharitri", "blockchain", "contract", "debug"]
categories = ["cryptography::cryptocurrencies", "development-tools::debugging"]

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustc_version = "0.4"
toml = { version = "0.8.6", features = ["preserve_order"] }
colored = "2.0"
lazy_static = "1.4.0"
convert_case = "0.6.0"
hex = "0.4"
wasmparser = "0.214"
wasmprinter = "0.214"
semver = "1.0.20"

[dependencies.drt-sc]
version = "=0.0.2"
path = "../base"
features = ["alloc", "num-bigint"]
