[package]
name = "drt-sc-scenario"
version = "0.0.1"
edition = "2021"

authors = [
    "xfactor <xfactor.toml@gmail.com>",
    "DharitriOne <contact@dharitri.com>",
]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/DharitriOne/drt-sdk-rs"
homepage = "https://dharitri.com/"
documentation = "https://docs.dharitri.com/"
description = "DharitriOne tools for writing and executing scenarios"
keywords = ["dharitri", "blockchain", "contract", "debug"]
categories = ["cryptography::cryptocurrencies", "development-tools::debugging"]

[dependencies]
base64 = "0.22"
num-bigint = "0.4"
num-traits = "0.2"
hex = "0.4"
bech32 = "0.9"
log = "0.4.17"
sha2 = "0.10.6"
serde = "1.0"
serde_json = "1.0"
pathdiff = "0.2.1"
itertools = "0.13.0"
colored = "2.0"
unwrap-infallible = "0.1.5"

[features]
default = ["wasm-incopatible"]
wasm-incopatible = ["drt-chain-vm/wasm-incopatible"]
run-go-tests = []

[dependencies.drt-sc]
version = "=0.0.1"
features = ["alloc", "num-bigint"]
path = "../base"

[dependencies.drt-sc-meta-lib]
version = "=0.0.1"
path = "../meta-lib"

[dependencies.drt-chain-scenario-format]
version = "0.0.1"
path = "../../sdk/scenario-format"

[dependencies.drt-chain-vm-executor]
version = "0.0.1"

[dependencies.drt-chain-vm]
version = "=0.0.1"
path = "../../vm"
