[package]
name = "drt-sc-snippets"
version = "0.0.2"
edition = "2021"

authors = ["xfactor-toml <xfactor.toml@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/DharitriOne/drt-sdk-rs"
homepage = "https://dharitri.com/"
documentation = "https://docs.dharitri.com/"
description = "Dharitri framework for building smart contract interaction snippets"
keywords = ["dharitri", "blockchain", "contract", "snippets"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
tokio = { version = "1.24", features = ["full"] }
hex = "0.4"
base64 = "0.22"
log = "0.4.17"
env_logger = "0.11"
futures = "0.3"

[dependencies.drt-sc-scenario]
version = "=0.0.2"
path = "../scenario"

[dependencies.drt-chain-scenario-format]
version = "0.22.3"
path = "../../sdk/scenario-format"

[dependencies.drt-sdk]
version = "=0.5.0"
path = "../../sdk/core"

[dev-dependencies]
serde_json = "1.0"
