[package]
name = "drt-sc-wasm-adapter"
version = "0.0.3"
edition = "2021"

authors = ["xfactor-toml <xfactor.toml@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/DharitriOne/drt-sdk-rs"
homepage = "https://dharitri.com/"
documentation = "https://docs.dharitri.com/"
description = "Dharitri WebAssembly VM API wrapper"
keywords = ["dharitri", "wasm", "webassembly", "blockchain", "contract"]
categories = [
    "no-std",
    "wasm",
    "cryptography::cryptocurrencies",
    "development-tools::ffi",
]

[dependencies.drt-sc]
version = "=0.0.3"
path = "../base"
