[package]
name = "drt-chain-scenario-format"
version = "0.0.2"
edition = "2021"

authors = ["xfactor-toml <xfactor.toml@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/DharitriOne/drt-sdk-rs"
homepage = "https://dharitri.com/"
documentation = "https://docs.dharitri.com/"
description = "Parser/writer of the Dharitri transaction scenario format"
keywords = ["dharitri", "blockchain", "contract"]
categories = ["cryptography::cryptocurrencies", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-bigint = "0.4"
num-traits = "0.2"
hex = "0.4"
sha3 = "0.10.8"
bech32 = "0.9.0"
