[package]
name = "sc-plotter-wasm"
version = "0.0.0"
authors = ["xfactor-toml <xfactor.toml@gmail.com>"]
license = "GPL-3.0-only"
repository = "https://github.com/DharitriOne/drt-sdk-rs"
description = "Web app for displaying function graphs from the framework"
edition = "2021"
publish = false

[lib]
crate-type=["cdylib"]

[dependencies]
plotters = "^0.3.2"
wasm-bindgen = "0.2.78"
web-sys = { version = "0.3.39", features = ["HtmlCanvasElement"] }
plotters-canvas = "^0.3.0"

[profile.release]
lto = true

[dependencies.drt-sc]
version = "=0.0.2"
path = "../../framework/base"

[dependencies.drt-sc-scenario]
version = "=0.0.2"
path = "../../framework/scenario"
default-features = false

[workspace]
members = ["."]
