[package]
name = "send-tx-repeat"
version = "0.0.0"
authors = ["xfactor-toml <xfactor.toml@gmail.com>"]
edition = "2021"
publish = false

[lib]
path = "src/send_tx_repeat.rs"

[dependencies.drt-sc]
version = "0.0.3"
path = "../../../framework/base"

[dev-dependencies.drt-sc-scenario]
version = "0.0.3"
path = "../../../framework/scenario"
