[package]
name = "str-repeat"
version = "0.0.0"
authors = ["xfactor <xfactor.toml@gmail.com>"]
edition = "2021"
publish = false

[lib]
path = "src/str_repeat.rs"

[features]
managed-buffer-builder-cached = ["drt-sc/managed-buffer-builder-cached"]

[dependencies.drt-sc]
version = "0.0.1"
path = "../../../framework/base"
features = ["alloc"]

[dev-dependencies.drt-sc-scenario]
version = "0.0.1"
path = "../../../framework/scenario"
