[package]
name = "drt-price-aggregator-sc"
version = "0.0.2"
authors = ["xfactor-toml <xfactor.toml@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/DharitriOne/drt-sdk-rs"
homepage = "https://dharitri.com/"
documentation = "https://docs.dharitri.com/"
description = "Dharitri Price aggregator Smart Contract"
keywords = ["dharitri", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies"]
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies.drt-sc]
version = "0.0.2"
path = "../../../framework/base"

[dependencies.drt-sc-modules]
version = "0.0.2"
path = "../../../contracts/modules"

[dev-dependencies.drt-sc-scenario]
version = "0.0.2"
path = "../../../framework/scenario"

[dependencies]
arrayvec = { version = "0.7", default-features = false }
rand = { version = "0.8.5" }
getrandom = { version = "0.2", features = ["js"] }
