[package]
name = "drt-wrewa-swap-sc"
version = "0.0.3"

authors = ["xfactor-toml <xfactor.toml@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/DharitriOne/drt-sdk-rs"
homepage = "https://dharitri.com/"
documentation = "https://docs.dharitri.com/"
description = "Dharitri Wrapped REWA Smart Contract"
keywords = ["dharitri", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies"]
edition = "2021"

[lib]
path = "src/wrewa.rs"

[dependencies.drt-sc]
version = "0.0.3"
path = "../../../framework/base"

[dependencies.drt-sc-modules]
version = "0.0.3"
path = "../../../contracts/modules"

[dev-dependencies.drt-sc-scenario]
version = "0.0.3"
path = "../../../framework/scenario"
