[package]
name = "dct-transfer-with-fee"
version = "0.0.0"
authors = ["xfactor <xfactor.toml@gmail.com>"]
edition = "2021"
publish = false

[lib]
path = "src/dct_transfer_with_fee.rs"

[dependencies.drt-sc]
version = "0.0.1"
path = "../../../framework/base"

[dev-dependencies.drt-sc-scenario]
version = "0.0.1"
path = "../../../framework/scenario"
