[package]
name = "digital-cash"
version = "0.0.0"
authors = [ "Valentin Craciun"]
edition = "2021"
publish = false

[lib]
path = "src/digital_cash.rs"

[dependencies.drt-sc]
version = "0.0.1"
path = "../../../framework/base"

[dev-dependencies.drt-sc-scenario]
version = "0.0.1"
path = "../../../framework/scenario"
