[package]
name = "factorial"
version = "0.0.0"
authors = ["xfactor <xfactor.toml@gmail.com>"]
edition = "2021"
publish = false

[lib]
path = "src/factorial.rs"

[dependencies.drt-sc]
version = "0.0.1"
path = "../../../framework/base"

[dev-dependencies.drt-sc-scenario]
version = "0.0.1"
path = "../../../framework/scenario"
