[package]
name = "fractional-nfts"
version = "0.0.0"
authors = ["xfactor-toml <xfactor.toml@gmail.com>"]
edition = "2021"
publish = false

[lib]
path = "src/fractional_nfts.rs"

[dependencies.drt-sc]
version = "0.0.3"
path = "../../../framework/base"

[dependencies.drt-sc-modules]
version = "0.0.3"
path = "../../../contracts/modules"

[dev-dependencies.drt-sc-scenario]
version = "0.0.3"
path = "../../../framework/scenario"
