[package]
name = "multisig"
version = "1.0.0"
authors = ["xfactor-toml <xfactor.toml@gmail.com>"]
edition = "2021"
publish = false

[lib]
path = "src/multisig.rs"

[dependencies.drt-sc]
version = "0.0.3"
path = "../../../framework/base"

[dependencies.drt-sc-modules]
version = "0.0.3"
path = "../../../contracts/modules"

[dev-dependencies.drt-sc-scenario]
version = "0.0.3"
path = "../../../framework/scenario"

[dev-dependencies.adder]
path = "../adder"

[dev-dependencies.factorial]
path = "../factorial"

[dev-dependencies.drt-wrewa-swap-sc]
version = "0.0.3"
path = "../../core/wrewa-swap"

[dev-dependencies]
num-bigint = "0.4"
num-traits = "0.2"
hex = "0.4"
